--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <hr>
         <nav class="Menu">
             <ul>
-                <li><a href="#">Bem Vindo</a></li>
-                <li><a href="#">ao meu Portfólio!</a></li>
-                <li><a href="#">Me Chamo Carol</a></li>
+                <li><a href="#">Sobre</a></li>
+                <li><a href="#">Portfólio</a></li>
+                <li><a href="#">Contato</a></li>
             </ul>
         </nav>
     </header>
