--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </nav>
     </header>
    <section id="#sobre">
-       <p><font-size: 50%><font color = "white"> Meu nome é Carolina Lopes Mendes, tenho 15 anos e atualmente moro em Indaiatuba, SP. Eu vim para esse mundo em 12 de dezembro de 2008, eu nasci e morava em Belém do Pará, na casa da minha vó, eu morei por pouco tempo na casa e depois de um curto tempo nós nos mudamos para uma casa maior em um condomínio, onde morei a minha infância inteira, e durante ela eu era um pouco tímida no começo, mas fui melhorando com o tempo e passei e ser mais comunicativa e aberta com algumas coisas, e aos poucos me tornai mais ativa e energética.
+       <p><font-size: 50%> Meu nome é Carolina Lopes Mendes, tenho 15 anos e atualmente moro em Indaiatuba, SP. Eu vim para esse mundo em 12 de dezembro de 2008, eu nasci e morava em Belém do Pará, na casa da minha vó, eu morei por pouco tempo na casa e depois de um curto tempo nós nos mudamos para uma casa maior em um condomínio, onde morei a minha infância inteira, e durante ela eu era um pouco tímida no começo, mas fui melhorando com o tempo e passei e ser mais comunicativa e aberta com algumas coisas, e aos poucos me tornai mais ativa e energética.
 
 Estou no 1-° ano do Ensino Médio do Instituto Federal de São Paulo (IFSP) Campus Salto, cursando o curso de Informática para Internet, pois isso é algo que realmente gosto e me interesso bastante, por exemplo, minha matéria favorita é Fundamentos de Informática para Internet, na qual eu aprendo bastante diversas coisas técnicas a respeito de dispositivos eletrônicos conectados a rede, como computadores e celulares.
 
@@ -32,7 +32,7 @@ Minhas amizades são muito importantes para mim, apesar de eu gostar de ficar so
 
 Eu tenho grandes sonhos para o futuro, nele eu quero ser independente e conseguir o meu próprio dinheiro, por enquanto, eu estou começando o meu sonho agora, que é estudar muito para conseguir o emprego que eu quero, pois gostaria de trabalhar com algo que eu quero, meu sonho é trabalhar com marketing.
 Primeiro quero fazer diversos cursos, por exemplo, design gráfico, na faculdade planejo começar a procurar aulas de Marketing e Marketing Digital, para conseguir um bom emprego, primeiro começar com marcas pequenas e propagandas para depois conseguir trabalhar em empresas famosas, de preferência, empresas tecnológicas, como por exemplo, empresas de jogos, porque eu amo tecnologia. 
-Quando eu conseguir ganhar muito dinheiro, planejo morar nos Estados Unidos e conseguir viver lá, pois pra mim tem muitas oportunidades que eu posso ter, eu não sei muito bem o que me espera no futuro, mas eu espero muito conseguir essas coisas para conseguir ter uma vida legal com um trabalho que eu gosto muito.</font-size></font>
+Quando eu conseguir ganhar muito dinheiro, planejo morar nos Estados Unidos e conseguir viver lá, pois pra mim tem muitas oportunidades que eu posso ter, eu não sei muito bem o que me espera no futuro, mas eu espero muito conseguir essas coisas para conseguir ter uma vida legal com um trabalho que eu gosto muito.</font-size>
     </section>
 </body>
 
