--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </nav>
     </header>
    <section id="#sobre">
-       <p><font-size: 50%> Meu nome é Carolina Lopes Mendes, tenho 15 anos e atualmente moro em Indaiatuba, SP. Eu vim para esse mundo em 12 de dezembro de 2008, eu nasci e morava em Belém do Pará, na casa da minha vó, eu morei por pouco tempo na casa e depois de um curto tempo nós nos mudamos para uma casa maior em um condomínio, onde morei a minha infância inteira, e durante ela eu era um pouco tímida no começo, mas fui melhorando com o tempo e passei e ser mais comunicativa e aberta com algumas coisas, e aos poucos me tornai mais ativa e energética.
+       <p><font-size: "5"> Meu nome é Carolina Lopes Mendes, tenho 15 anos e atualmente moro em Indaiatuba, SP. Eu vim para esse mundo em 12 de dezembro de 2008, eu nasci e morava em Belém do Pará, na casa da minha vó, eu morei por pouco tempo na casa e depois de um curto tempo nós nos mudamos para uma casa maior em um condomínio, onde morei a minha infância inteira, e durante ela eu era um pouco tímida no começo, mas fui melhorando com o tempo e passei e ser mais comunicativa e aberta com algumas coisas, e aos poucos me tornai mais ativa e energética.
 
 Estou no 1-° ano do Ensino Médio do Instituto Federal de São Paulo (IFSP) Campus Salto, cursando o curso de Informática para Internet, pois isso é algo que realmente gosto e me interesso bastante, por exemplo, minha matéria favorita é Fundamentos de Informática para Internet, na qual eu aprendo bastante diversas coisas técnicas a respeito de dispositivos eletrônicos conectados a rede, como computadores e celulares.
 
