--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="html/HTML/style.css">
     <title>Menu do Portfólio</title>
 </head>
 
@@ -17,17 +17,24 @@
         <hr>
         <nav class="Menu">
             <ul>
-                <li><a href="#">Sobre</a></li>
+                <li><a href="#sobre">Sobre</a></li>
                 <li><a href="#">Portfólio</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="#contato.html">Contato</a></li>
             </ul>
         </nav>
     </header>
-   <section id="#sobre">
-       <p><font size: "5"> Meu nome é Carolina Lopes Mendes, tenho 15 anos e atualmente moro em Indaiatuba, SP. Eu vim para esse mundo em 12 de dezembro de 2008, eu nasci e morava em Belém do Pará, na casa da minha vó, eu morei por pouco tempo na casa e depois de um curto tempo nós nos mudamos para uma casa maior em um condomínio, onde morei a minha infância inteira, e durante ela eu era um pouco tímida no começo, mas fui melhorando com o tempo e passei e ser mais comunicativa e aberta com algumas coisas, e aos poucos me tornai mais ativa e energética. Estou no 1-° ano do Ensino Médio do Instituto Federal de São Paulo (IFSP) Campus Salto, cursando o curso de Informática para Internet, pois isso é algo que realmente gosto e me interesso bastante, por exemplo, minha matéria favorita é Fundamentos de Informática para Internet, na qual eu aprendo bastante diversas coisas técnicas a respeito de dispositivos eletrônicos conectados a rede, como computadores e celulares. Minhas amizades são muito importantes para mim, apesar de eu gostar de ficar sozinha de vez em quando, é sempre bom ter um amigo do meu lado pra conversar comigo e me ajudar quando puder, meus melhores amigos são meus amigos escolares e a minha família, fora ela, minhas primeiras experiências de amizade ocorreram na escola, com uma menina chamada Rebecca, nós passamos muito tempo juntas, moramos no mesmo condomínio, fazíamos a mesma academia e estudávamos na mesma escola, com ela eu aprendi a ter uma amizade com uma pessoa da minha idade. Eu tenho grandes sonhos para o futuro, nele eu quero ser independente e conseguir o meu próprio dinheiro, por enquanto, eu estou começando o meu sonho agora, que é estudar muito para conseguir o emprego que eu quero, pois gostaria de trabalhar com algo que eu quero, meu sonho é trabalhar com marketing.
+    <section id="#sobre">
+        <p><font-size: 50%><font color = "white"> Meu nome é Carolina Lopes Mendes, tenho 15 anos e atualmente moro em Indaiatuba, SP. Eu vim para esse mundo em 12 de dezembro de 2008, eu nasci e morava em Belém do Pará, na casa da minha vó, eu morei por pouco tempo na casa e depois de um curto tempo nós nos mudamos para uma casa maior em um condomínio, onde morei a minha infância inteira, e durante ela eu era um pouco tímida no começo, mas fui melhorando com o tempo e passei e ser mais comunicativa e aberta com algumas coisas, e aos poucos me tornai mais ativa e energética.
+
+Estou no 1-° ano do Ensino Médio do Instituto Federal de São Paulo (IFSP) Campus Salto, cursando o curso de Informática para Internet, pois isso é algo que realmente gosto e me interesso bastante, por exemplo, minha matéria favorita é Fundamentos de Informática para Internet, na qual eu aprendo bastante diversas coisas técnicas a respeito de dispositivos eletrônicos conectados a rede, como computadores e celulares.
+
+Minhas amizades são muito importantes para mim, apesar de eu gostar de ficar sozinha de vez em quando, é sempre bom ter um amigo do meu lado pra conversar comigo e me ajudar quando puder, meus melhores amigos são meus amigos escolares e a minha família, fora ela, minhas primeiras experiências de amizade ocorreram na escola, com uma menina chamada Rebecca, nós passamos muito tempo juntas, moramos no mesmo condomínio, fazíamos a mesma academia e estudávamos na mesma escola, com ela eu aprendi a ter uma amizade com uma pessoa da minha idade.
+
+Eu tenho grandes sonhos para o futuro, nele eu quero ser independente e conseguir o meu próprio dinheiro, por enquanto, eu estou começando o meu sonho agora, que é estudar muito para conseguir o emprego que eu quero, pois gostaria de trabalhar com algo que eu quero, meu sonho é trabalhar com marketing.
 Primeiro quero fazer diversos cursos, por exemplo, design gráfico, na faculdade planejo começar a procurar aulas de Marketing e Marketing Digital, para conseguir um bom emprego, primeiro começar com marcas pequenas e propagandas para depois conseguir trabalhar em empresas famosas, de preferência, empresas tecnológicas, como por exemplo, empresas de jogos, porque eu amo tecnologia. 
-Quando eu conseguir ganhar muito dinheiro, planejo morar nos Estados Unidos e conseguir viver lá, pois pra mim tem muitas oportunidades que eu posso ter, eu não sei muito bem o que me espera no futuro, mas eu espero muito conseguir essas coisas para conseguir ter uma vida legal com um trabalho que eu gosto muito.</p></font>
+Quando eu conseguir ganhar muito dinheiro, planejo morar nos Estados Unidos e conseguir viver lá, pois pra mim tem muitas oportunidades que eu posso ter, eu não sei muito bem o que me espera no futuro, mas eu espero muito conseguir essas coisas para conseguir ter uma vida legal com um trabalho que eu gosto muito.</font-size></font>
     </section>
+
 </body>
 
 </html>
